Init feate Login, custome button loading

--- a/src/components/LoadingAction/style.scss
+++ b/src/components/LoadingAction/style.scss
@@ -1,4 +1,6 @@
 div.loading-action {
+    padding-left: 1rem;
+    min-height: 2.5rem;
 
     div.logo-loading {
         -webkit-box-align: center;
