--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -5,5 +5,11 @@
     --error-text: #ff0000;
     --orange: #ff5900d8;
     --orange-base: #ff5900;
+    --white-orange: #fac6aa;
+    --orange-base-opacity: #ff59006b;
     --blue-base: #1677FF;
+    --black-1: #151515;
+    --gray: #a19e9e6d;
+    --white-1: #fafafa;
+    --green: #52c41a;
 }
