--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -12,4 +12,6 @@
     --gray: #a19e9e6d;
     --white-1: #fafafa;
     --green: #52c41a;
+    --bg-row-header: #efb291d8;
+    --white-silver: #F0F2F5;
 }
