init detail course manager

--- a/src/elements/DataGrid/style.scss
+++ b/src/elements/DataGrid/style.scss
@@ -139,12 +139,20 @@
                                     &.red {
                                         color: var(--error-text) !important;
                                     }
+
+                                    &.yellow {
+                                        color: var(--yellow) !important;
+                                    }
                                 }
                             }
                         }
 
                     }
                 }
+            }
+
+            .ag-row {
+                cursor: pointer;
             }
         }
 
